Grace/tests/gibbs/errors/t238.grace
// ERROR = P1040
def x = { print "I am a block." }

while {false} do
